Changelog component complete: bullet and line added; html structure small changes; button stylished; class names changed.

--- a/index.html
+++ b/index.html
@@ -9,48 +9,64 @@
 </head>
 
 <body>
-  <div class="changelogComponent">
-    <header class="changelogHeader">
+  <div class="changelog-component">
+    <header class="changelog-header">
       <h2>Changelog</h2>
       <p>
         Here's Everything we have shipped in the past few days
       </p>
     </header>
 
-    <article class="changelogMap">
-      <section class="changelog">
-        <div class="changelogData">
-          Semptember 3, 2024
+    <div class="changelog-items">
+
+      <article class="item-conteiner">
+        <div class="data">
+          September 3, 2024
         </div>
-        *
-        <div class="changelogText">
+
+        <div class="bullet-conteiner">
+          <div class="bullet"></div>
+          <div class="line"></div>
+        </div>
+
+        <div class="text">
           Announcing Projects on Frontend Roadmap
         </div>
-      </section>
+      </article>
 
-      <section class="changelog">
-        <div class="changelogData">
-          August 28, 2024
+      <article class="item-conteiner">
+        <div class="data">
+          September 3, 2024
         </div>
-        *
-        <div class="changelogText">
-          Build your learning habits with learning streaks
-        </div>
-      </section>
 
-      <section class="changelog">
-        <div class="changelogData">
-          August 22, 2024
+        <div class="bullet-conteiner">
+          <div class="bullet"></div>
+          <div class="line"></div>
         </div>
-        *
-        <div class="changelogText">
-          Submit your project solution and get feedback
+
+        <div class="text">
+          Announcing Projects on Frontend Roadmap
         </div>
-      </section>
+      </article>
 
-    </article>
+      <article class="item-conteiner">
+        <div class="data">
+          September 3, 2024
+        </div>
 
-    <button>
+        <div class="bullet-conteiner">
+          <div class="bullet"></div>
+          <div class="line"></div>
+        </div>
+
+        <div class="text">
+          Announcing Projects on Frontend Roadmap
+        </div>
+      </article>
+
+    </div>
+
+    <button class="button">
       Visit Complete Changelog
     </button>
   </div>
