texts and dates changed; text align changed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <article class="item-conteiner">
         <div class="data">
-          September 3, 2024
+          August 24, 2024
         </div>
 
         <div class="bullet-conteiner">
@@ -45,13 +45,13 @@
         </div>
 
         <div class="text">
-          Announcing Projects on Frontend Roadmap
+          Build your learning habits with learning streaks
         </div>
       </article>
 
       <article class="item-conteiner">
         <div class="data">
-          September 3, 2024
+          AUgust 25, 2024
         </div>
 
         <div class="bullet-conteiner">
@@ -60,7 +60,7 @@
         </div>
 
         <div class="text">
-          Announcing Projects on Frontend Roadmap
+          Git and Github Roadmap
         </div>
       </article>
 
